--- a/package.json
+++ b/package.json
@@ -3,22 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start:dev": "cross-env NODE_ENV=development node server.js",
+    "start:staging": "cross-env NODE_ENV=staging next start",
+    "start:prod": "cross-env NODE_ENV=production next start",
+    "format": "prettier -w .",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1",
     "next": "12.2.4",
+    "next-redux-wrapper": "^7.0.5",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-redux": "^7.1.24",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "4.7.4"
   }
 }
